[gd_scene load_steps=2 format=3 uid="uid://dtn5rwtf7tjeg"]

[ext_resource type="Script" path="res://scripts/ui/pause_ui.gd" id="1_mkld0"]

[node name="PauseUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_mkld0")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 184.0
offset_bottom = 160.0
color = Color(0, 0, 0, 0.196078)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 182.0
offset_bottom = 160.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GAME PAUSED"

[node name="ResumeButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="SaveButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="ResetButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Reset Game"
